--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev --turbo --port 3131",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@tabler/icons-react": "^3.4.0",
-		"@upstash/ratelimit": "^1.1.3",
-		"@upstash/redis": "^1.31.1",
-		"@vercel/analytics": "^1.2.2",
-		"ai": "^3.1.10",
+		"@tabler/icons-react": "^3.19.0",
+		"@upstash/ratelimit": "^1.2.1",
+		"@upstash/redis": "^1.34.3",
+		"@vercel/analytics": "^1.3.1",
+		"ai": "^3.4.9",
 		"clsx": "^2.1.1",
-		"geist": "^1.3.0",
+		"geist": "^1.3.1",
 		"next": "14.2.0",
-		"openai": "^4.47.1",
+		"openai": "^4.67.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"sonner": "^1.4.41"
+		"sonner": "^1.5.0"
 	},
 	"devDependencies": {
-		"@types/node": "^20.12.12",
-		"@types/react": "^18.3.2",
-		"@types/react-dom": "^18.3.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
+		"@types/node": "^20.16.11",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8.57.1",
 		"eslint-config-next": "14.2.0",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.5"
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.6.3"
 	}
 }
